--- a/percentage.html
+++ b/percentage.html
@@ -18,37 +18,43 @@
             <section class="sec section2">
                 <div class="details">
                     <div class="detail detail1">
-                        <div class="sub sub-detail2">1st Semester SGPA</div>
+                        <div class="sub sub-detail2">1-1 Semester SGPA</div>
                         <div class="sub sub-detail3">
                             <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail2">
-                        <div class="sub sub-detail2">2nd Semester SGPA</div>
+                        <div class="sub sub-detail2">1-2 Semester SGPA</div>
                         <div class="sub sub-detail3">
                             <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail3">
-                        <div class="sub sub-detail2">3rd Semester SGPA</div>
+                        <div class="sub sub-detail2">2-1 Semester SGPA</div>
                         <div class="sub sub-detail3">
                             <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail4">
-                        <div class="sub sub-detail2">4th Semester SGPA</div>
+                        <div class="sub sub-detail2">2-2 Semester SGPA</div>
                         <div class="sub sub-detail3">
                             <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail5">
-                        <div class="sub sub-detail2">5th Semester SGPA</div>
+                        <div class="sub sub-detail2">3-1 Semester SGPA</div>
                         <div class="sub sub-detail3">
                             <input type="number" placeholder="   Enter....." required>
                         </div>
                     </div>
                     <div class="detail detail6">
-                        <div class="sub sub-detail2">6th Semester SGPA</div>
+                        <div class="sub sub-detail2">3-2 Semester SGPA</div>
+                        <div class="sub sub-detail3">
+                            <input type="number" placeholder="   Enter....." required>
+                        </div>
+                    </div>
+                    <div class="detail detail7">
+                        <div class="sub sub-detail2">4-1 Semester SGPA</div>
                         <div class="sub sub-detail3">
                             <input type="number" placeholder="   Enter....." required>
                         </div>
@@ -68,17 +74,7 @@
             </section>
             <section class="sec section4">
                 <footer class="foot-content">
-                    <div class="query-portion">
-                        <form action="mailto:umanagendrakumar100@gmail.com" class="query-form">
-                            <div class="query-head">Any Queries ?</div>
-                            <!-- <div class="query-minihead">Ex: Which Formula used for PERCENTAGE Calculation.</div>
-                            <div class="query-minihead">Ex: Some Errors Found. </div> -->
-                            <div class="flex">
-                                <!-- <input class="query-input" type="email" placeholder="Email address..." required> -->
-                                <button class="query-button">Raise a Query</button>
-                            </div>
-                        </form>
-                    </div>
+                    
                     <div class="contact">
                         <div class="logo">
                             <a href="index.html" class="logo-a">
