--- a/grade.html
+++ b/grade.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SGPA Converter</title>
+    <title>3-1 SGPA Converter</title>
     <link rel="stylesheet" href="grade.css">
 </head>
 
