--- a/percentage.html
+++ b/percentage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="percentage.css">
-    <title>Percentage Converter</title>
+    <title>% Converter</title>
     <script src="percentage.js"></script>
 </head>
 
